# argp-standalone

./: .pre-commit-config.yaml  ChangeLog  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pv.c  argp-pvh.c  argp-test.c  argp.h  config.h.in  configure  configure.ac  configure.in  install-sh  mempcpy.c  meson.build  meson_config.h.in  strcasecmp.c  strchrnul.c  strndup.c
.github/: environment.yml  meson_build_env.yml
.github/workflows/: main.yml
testsuite/: Makefile.am  Makefile.in  ex1-test  ex1.c  ex3.c  ex4.c  permute-test  run-tests
